--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,14 +69,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-2Q0JLK0
 LastExecutedLaunchName=DESKTOP-2Q0JLK0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -130,12 +129,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem1=/Game/DungeonTESTLevel1
-MRUItem2=/Game/NEW_DungeonLevel_TEST
+MRUItem0=/Game/NEW_DungeonLevel_TEST
+MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem2=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
+ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/UI
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -205,37 +204,40 @@ SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/DungeonLevel_MAZE_ADDED
-LastLevel=/Game/MedievalDungeon/Maps/DungeonLevel
+LastLevel=/Game/NEW_DungeonLevel_TEST
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/InventorySystem/TalentToken.TalentToken
+OpenAssetsAtExit=/Game/InventorySystem/Consumables/HealthPotion.HealthPotion
+OpenAssetsAtExit=/Game/InventorySystem/Consumables/TalentToken.TalentToken
 OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/Tanner/SaveGame/MySaveGame.MySaveGame
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
+OpenAssetsAtExit=/Game/InventorySystem/UI/TalentTokenHUD.TalentTokenHUD
+OpenAssetsAtExit=/Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem1=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem2=/Game/Tanner/SaveGame/MySaveGame
-MRUItem3=/Game/Player
-MRUItem4=/Game/DungeonTESTLevel1
-MRUItem5=/Game/Evan/KeystoneImport/Dragonslayer
-MRUItem6=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem7=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem8=/Game/InventorySystem/UI/UseDropWG
-MRUItem9=/Game/InventorySystem/UI/PickupWG
-MRUItem10=/Game/InventorySystem/UI/InventoryWG
-MRUItem11=/Game/InventorySystem/UI/ChestSlotWG
-MRUItem12=/Game/InventorySystem/UI/ChestInventoryWG
-MRUItem13=/Game/InventorySystem/Chest/WorkingChest5
-MRUItem14=/Game/InventorySystem/Chest/WorkingChest4
-MRUItem15=/Game/InventorySystem/Chest/WorkingChest3
-MRUItem16=/Game/InventorySystem/Chest/WorkingChest2
-MRUItem17=/Game/InventorySystem/Consumables/StaminaPotion
-MRUItem18=/Game/InventorySystem/Consumables/ManaPotion
-MRUItem19=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem0=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem1=/Game/InventorySystem/UI/TalentTokenHUD
+MRUItem2=/Game/Player
+MRUItem3=/Game/InventorySystem/Consumables/TalentToken
+MRUItem4=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem5=/Game/InventorySystem/TalentToken
+MRUItem6=/Game/InventorySystem/UI/ChestSlotWG
+MRUItem7=/Game/InventorySystem/Consumables/ManaPotion
+MRUItem8=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem9=/Game/InventorySystem/Chest/WorkingChest5
+MRUItem10=/Game/InventorySystem/Chest/WorkingChest4
+MRUItem11=/Game/InventorySystem/Chest/WorkingChest3
+MRUItem12=/Game/InventorySystem/Chest/WorkingChest2
+MRUItem13=/Game/InventorySystem/UI/InventoryWG
+MRUItem14=/Game/InventorySystem/UI/ChestInventoryWG
+MRUItem15=/Game/InventorySystem/UI/PickupWG
+MRUItem16=/Game/InventorySystem/Consumables/StaminaPotion
+MRUItem17=/Game/InventorySystem/InventoryInst
+MRUItem18=/Game/InventorySystem/Struct_ItemInfo
+MRUItem19=/Game/MedievalDungeon/Maps/DungeonLevel
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -1085,23 +1087,91 @@ Dragonslayer_C.Input=True
 Dragonslayer_C.Actor=True
 Dragonslayer_C.Tick=True
 Dragonslayer_C.Default=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+PreviewMaterial.Hololens=True
+TalentToken_C.Tick=True
+TalentToken_C.Default=True
+TalentToken_C.Replication=True
+TalentToken_C.Rendering=True
+TalentToken_C.Collision=True
+TalentToken_C.Actor=True
+TalentToken_C.Input=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TalentTokenHUD_C.Appearance=True
+TalentTokenHUD_C.Designer=True
+TalentTokenHUD_C.Input=True
+TalentTokenHUD_C.Interaction=True
+TalentTokenHUD_C.Performance=True
+TalentTokenHUD_C.Layout=True
+TalentTokenHUD_C.Behavior=True
+TalentTokenHUD_C.Render Transform=True
+TalentTokenHUD_C.Accessibility=True
+TalentTokenHUD_C.Clipping=True
+TalentTokenHUD_C.Navigation=True
+TalentTokenHUD_C.Localization=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest5.WorkingChest5;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest4.WorkingChest4;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest3.WorkingChest3;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest2.WorkingChest2;
 RecentlyPlaced=/Game/InventorySystem/Chest/ChestBP.ChestBP;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Alexis/AI/KnightAI_BP.KnightAI_BP;
 RecentlyPlaced=/Game/InventorySystem/Consumables/ManaPotion.ManaPotion;
 RecentlyPlaced=/Game/InventorySystem/Consumables/StaminaPotion.StaminaPotion;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/WorkingChest5.WorkingChest5;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest4.WorkingChest4;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest3.WorkingChest3;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest2.WorkingChest2;
 RecentlyPlaced=/Game/InventorySystem/Consumables/HealthPotion.HealthPotion;
 RecentlyPlaced=/Game/InventorySystem/WorkingChest4.WorkingChest4;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest3.WorkingChest3;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest2.WorkingChest2;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest2.WorkingChest2;
 RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest.WorkingChest;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/Chest_2.Chest_2;
 None=======
@@ -1195,6 +1265,8 @@ None=======
 /Game/InventorySystem/UI/PickupWG.PickupWG=1
 /Game/InventorySystem/UI/UseDropWG.UseDropWG=1
 /Game/Evan/KeystoneImport/Dragonslayer.Dragonslayer=1
+/Game/InventorySystem/InventoryInst.InventoryInst=1
+/Game/InventorySystem/TalentToken.TalentToken=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1234,23 +1306,23 @@ NodeTemplateCacheCapMB=20.000000
 
 [DetailPropertyExpansion]
 TestChest2_C=
-WorkingChest1_C="\"Object.Default.Chest_Items\" "
+WorkingChest1_C="\"Object.Default.Chest_Items\" \"Object.Default.Chest_Items.Chest_Items[0]\" \"Object.Default.Chest_Items.Chest_Items[1]\" "
 ManaPotion_C="\"Object.Default.ItemInfoStruct\" "
-InventoryInst_C="\"Object.InventoryData\" "
-GameInstance="\"Object.DungeonLevelName\" "
-Object="\"Object.TutorialPlayed\" "
-InventorySlotWG_C="\"Object.CurrentQuantity\" "
+InventoryInst_C=
+GameInstance=
+Object=
+InventorySlotWG_C=
 UserWidget=
 Widget=
 Visual=
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
 Player_C=
-Player_C="\"Object.TutorialPlayed\" "
+Player_C="\"Object.TalentTokenCounter\" "
 None=======
 None=======
-Character="\"Object.TutorialPlayed\" "
-Pawn="\"Object.TutorialPlayed\" "
+Character="\"Object.TalentTokenCounter\" "
+Pawn="\"Object.TalentTokenCounter\" "
 MySaveGame_C="\"Object.TutorialPlayed\" "
 SaveGame="\"Object.TutorialPlayed\" "
 InventoryWG_C=
@@ -1268,7 +1340,7 @@ ChestBP_C="\"Object.Default.Chest_Items\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 KnightController_C="\"Object.My Pawn\" "
 AIController="\"Object.My Pawn\" "
-Controller="\"Object.My Pawn\" "
+Controller="\"Object.bShowMouseCursor\" "
 CharacterMovementComponent="\"Object.MaxWalkSpeed\" "
 PawnMovementComponent="\"Object.MaxWalkSpeed\" "
 NavMovementComponent="\"Object.MaxWalkSpeed\" "
@@ -1280,6 +1352,9 @@ BTAuxiliaryNode=
 BTNode=
 HealthPotion_C="\"Object.Default.ItemInfoStruct\" "
 StaminaPotion_C="\"Object.Default.ItemInfoStruct\" "
+PlayerController="\"Object.bShowMouseCursor\" "
+ChestInventoryWG_C="\"Object.Inventory\" "
+Image="\"Object.Appearance.Brush\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -1293,10 +1368,11 @@ InstalledPlugins=XRVisualization
 [DetailCategoriesAdvanced]
 K2Node_VariableGet.Variable=True
 PropertyWrapper.Variable=False
+PreviewMaterial.Material=True
 
 [RootWindow]
-ScreenPosition=X=966.000 Y=188.000
-WindowSize=X=1288.000 Y=728.000
+ScreenPosition=X=0.800 Y=341.600
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2309,6 +2385,8 @@ LoadWidget_C=
 MyGameInstance_C=
 Dragon_C=
 CapsuleComponent=CapsuleComponent.Collision.Collision,
+PlayerController=
+ChestInventoryWG_C=
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -2359,4 +2437,67 @@ bHideUnrelatedNodes=False
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+bShowGrid=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
